# myoffice

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  Formula.cpp
tst/: formula-test.cpp
